WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222912
Select CSS properties animating as float should not allow negative values
https://bugs.webkit.org/show_bug.cgi?id=222912
Summary
Select CSS properties animating as float should not allow negative values
Antoine Quint
Reported
2021-03-08 08:18:09 PST
Select CSS properties animating as float should not allow negative values
Attachments
Patch
(69.87 KB, patch)
2021-03-08 08:20 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(99.77 KB, patch)
2021-03-08 09:48 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(105.13 KB, patch)
2021-03-08 23:19 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(94.86 KB, patch)
2021-03-09 00:02 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-03-08 08:20:51 PST
Created
attachment 422569
[details]
Patch
Antoine Quint
Comment 2
2021-03-08 09:48:09 PST
Created
attachment 422577
[details]
Patch
EWS
Comment 3
2021-03-08 21:45:50 PST
Tools/Scripts/svn-apply failed to apply
attachment 422577
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Antoine Quint
Comment 4
2021-03-08 23:19:00 PST
Created
attachment 422666
[details]
Patch
Antoine Quint
Comment 5
2021-03-09 00:02:27 PST
Created
attachment 422669
[details]
Patch
Antoine Quint
Comment 6
2021-03-09 03:22:38 PST
Committed
r274142
(
235063@main
): <
https://commits.webkit.org/235063@main
>
Radar WebKit Bug Importer
Comment 7
2021-03-09 03:23:14 PST
<
rdar://problem/75211226
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug