Select CSS properties animating as float should not allow negative values https://bugs.webkit.org/show_bug.cgi?id=222912

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Add an extra 57 PASS results. We now pass all the outline-width interpolation tests.

* web-platform-tests/css/css-backgrounds/animations/border-width-interpolation-expected.txt:
* web-platform-tests/css/css-multicol/animation/column-width-interpolation-expected.txt:
* web-platform-tests/css/css-ui/animation/outline-width-composition-expected.txt:
* web-platform-tests/css/css-ui/animation/outline-width-interpolation-expected.txt:

Source/WebCore:

The properties border-width, column-width, outline-width, perspective,
flex-grow and flex-shrink do not allow negative values. We create a new
animation wrapper specifically for these properties.

* animation/CSSPropertyAnimation.cpp:
(WebCore::NonNegativeFloatPropertyWrapper::NonNegativeFloatPropertyWrapper):
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

LayoutTests:

Mark WPT progressions for a platform-specific result.

* platform/ios/imported/w3c/web-platform-tests/css/css-backgrounds/animations/border-width-interpolation-expected.txt:

Canonical link: https://commits.webkit.org/235063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274142 268f45cc-cd09-0410-ab3c-d52691b4dbfc